k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blogapp
  labels:
    app.kubernetes.io/part-of: blogapp
