k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-backend
  namespace: blogapp
  labels:
    app.kubernetes.io/name: blogapp-backend
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blogapp-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blogapp-backend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: backend
          image: blogappregistry2026.azurecr.io/backend:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "blogapp-kv-secret-provider"

---
apiVersion: v1
kind: Service
metadata:
  name: blogapp-backend
  namespace: blogapp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blogapp-backend
  ports:
    - port: 5000
      targetPort: 5000
