k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-frontend
  namespace: blogapp
  labels:
    app.kubernetes.io/name: blogapp-frontend
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blogapp-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blogapp-frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: blogappregistry2026.azurecr.io/frontend:v1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 101 # مستخدم nginx الآمن داخل توزيعات alpine
            capabilities:
              drop:
                - ALL

---
apiVersion: v1
kind: Service
metadata:
  name: blogapp-frontend
  namespace: blogapp
spec:
  type: LoadBalancer 
  selector:
    app.kubernetes.io/name: blogapp-frontend
  ports:
    - port: 80
      targetPort: 8080
